# etg

./: .gitignore  CMakeLists.txt
cfg/: default.cfg  header_file.txt  header_method.txt
cmake/: FindClang.cmake  FindLLVM.cmake  FindProjectMacros.cmake
doc/: command_line.md  source_code.md
include/: CMakeLists.txt  etg.hpp  etg_qt5.hpp  etg_std.hpp
patches/: debian-10-buster.patch  debian-11-bullseye.patch
src/: CMakeLists.txt  enum.cpp  enum.hpp  factory.cpp  factory.hpp  file.cpp  file.hpp  file_pool.cpp  file_pool.hpp  header.cpp  header.hpp  implementation.cpp  implementation.hpp  main.cpp  scope.cpp  scope.hpp  scope_walker.cpp  scope_walker.hpp
src/qt5/: CMakeLists.txt  qt5_enum.cpp  qt5_enum.hpp  qt5_factory.cpp  qt5_factory.hpp  qt5_header.cpp  qt5_header.hpp  qt5_implementation.cpp  qt5_implementation.hpp
src/qt5_ns/: CMakeLists.txt  qt5_enum_ns.cpp  qt5_enum_ns.hpp  qt5_factory_ns.cpp  qt5_factory_ns.hpp  qt5_header_ns.cpp  qt5_header_ns.hpp  qt5_implementation_ns.cpp  qt5_implementation_ns.hpp
src/std/: CMakeLists.txt  std_enum.cpp  std_enum.hpp  std_factory.cpp  std_factory.hpp  std_header.cpp  std_header.hpp  std_implementation.cpp  std_implementation.hpp
src/std_ns/: CMakeLists.txt  std_enum_ns.cpp  std_enum_ns.hpp  std_factory_ns.cpp  std_factory_ns.hpp  std_header_ns.cpp  std_header_ns.hpp  std_implementation_ns.cpp  std_implementation_ns.hpp
test/: CMakeLists.txt  etg_qt5_de.ts  etg_qt5_en.ts
test/qt5/: CMakeLists.txt  c_full_enum.hpp  c_full_main.cpp  debug_main.cpp  f_c_full_enum.hpp  f_c_full_main.cpp  full_enum.hpp  full_main.cpp  i_c_full_main.cpp  i_full_main.cpp  ns_c_full_main.cpp  ns_full_main.cpp  ns_i_c_full_main.cpp  ns_i_full_main.cpp
test/qt5_ns/: CMakeLists.txt  debug_enum.hpp  f_c_full_main.cpp  full_enum.hpp  full_main.cpp  i_c_full_enum.hpp  i_c_full_main.cpp
test/std/: CMakeLists.txt  c_full_main.cpp  debug_main.cpp  full_main.cpp  i_c_full_main.cpp  i_full_main.cpp  ns_c_full_enum.hpp  ns_c_full_main.cpp  ns_full_main.cpp  ns_i_c_full_main.cpp  ns_i_full_main.cpp
test/std_ns/: CMakeLists.txt  c_full_enum.hpp  c_full_main.cpp  i_c_full_main.cpp  i_full_enum.hpp  i_full_main.cpp  ns_full_enum.hpp  ns_full_main.cpp  ns_i_c_full_enum.hpp  ns_i_full_enum.hpp
